# Kaizen

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.example  .gitignore  README.md  backup.sh  box-a-backup.service  box-a-backup.timer  box-a.service  docker-compose.box-a.yml  docker-compose.pgvector-test.yml  postgres-init.sh  provision.sh  runbook.md
docs/: REVIEW-2026-06.md  architecture.md  design-log.md  design-plan.md  roadmap.md  track-b-build-prompt.md
docs/decisions/: 0001-language-and-performance.md  0002-memory-architecture.md  0003-identity-and-relationship-graph.md  0004-headless-core-and-surfaces.md  0005-realtime-response-and-thinking.md  0006-model-strategy-and-setup.md  0007-compute-topology.md  0008-cost-and-billing.md  0009-tooling-and-skills.md  0010-hermes-integration.md  0011-world-awareness-and-initiation.md  0012-scale-backfill-multiparty.md  0013-infrastructure-and-hardware.md  0014-voice-and-persona.md
docs/research/: ecc-evaluation-and-integration.md  upstream-evaluation.md
docs/security/: trust-model.md
kaizen/: __init__.py  __main__.py  bootstrap.py  config.py
kaizen/cli/: __init__.py  main.py
kaizen/core/: __init__.py  context.py  loop.py  models.py
kaizen/curator/: __init__.py  apply.py  instinct.py  proposals.py  review.py
kaizen/eval/: __init__.py  __main__.py  cases.py  harness.py
kaizen/identity/: __init__.py  models.py  store.py
kaizen/integrations/: __init__.py
kaizen/memory/: __init__.py  base.py  embedder.py  factory.py  inmemory.py  postgres.py  scribe.py
kaizen/orchestration/: __init__.py  budgets.py  router.py
kaizen/persona/: __init__.py  prior.py  tone.py
kaizen/providers/: __init__.py  anthropic.py  base.py  claude_code.py  factory.py  local.py  mock.py
kaizen/realtime/: __init__.py  governor.py
kaizen/safety/: __init__.py  gate.py  redact.py
scripts/: pgvector-test.ps1  pgvector-test.sh
tests/: conftest.py  test_client.py  test_curator.py  test_embedder.py  test_engagement.py  test_eval.py  test_governor.py  test_identity.py  test_integration.py  test_live_infra.py  test_local.py  test_loop.py  test_memory.py  test_memory_factory.py  test_models.py  test_persistence_restart.py  test_persona.py  test_providers.py  test_router.py  test_safety.py  test_scheduler.py  test_scribe.py  test_service.py  test_skills.py  test_state.py  test_youtube.py
(+28 files in other folders)
