[project]
name = "kaizen"
version = "0.0.1"
description = "A personal, always-on, self-improving AI agent."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
discord = ["discord.py>=2.4"]
db = ["asyncpg>=0.29", "redis>=5", "sqlalchemy>=2", "alembic>=1.13", "pgvector>=0.3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
kaizen = "kaizen.cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kaizen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
