[project]
name = "kaizen"
version = "0.0.1"
description = "A personal, always-on, self-improving AI agent."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
discord = ["discord.py>=2.4"]
local = ["httpx>=0.27"]
db = ["asyncpg>=0.29", "redis>=5", "sqlalchemy>=2", "alembic>=1.13", "pgvector>=0.3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
kaizen = "kaizen.cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kaizen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
files = ["kaizen"]
# Optional backends (anthropic, discord.py, httpx, sqlalchemy, pgvector) are
# imported lazily and are not installed in the base CI job; treat their missing
# stubs as untyped rather than failing the run. This is scoped to third-party
# imports only — the kaizen package itself is fully checked below.
ignore_missing_imports = true
# Strict surface for first-party code. No blanket per-module ignores: every
# function in kaizen/ carries real annotations and passes these checks.
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
